# practise

./: README.md  test.sh
basic_c/: fork  fork_test.c  one  one_chapter.c  sched  sched_test.c  special  special_chapter.c
basic_c/kernel/: sched_advanced.c  sched_test.c  tasksleep  tasksleep.c
cmake_project/: CMakeLists.txt  kk_test.cpp
cmake_project/src_aa/: CMakeLists.txt  aa_test.cpp  aa_test.h
cmake_project/src_bb/: CMakeLists.txt  bb_test.cpp  bb_test.h
cmake_project/src_cc/: CMakeLists.txt  cc_test.cpp  cc_test.h
code_c++/basecode/: Untitled-1.cpp  Untitled-1.sh  a.out  aaa_test  aaa_test.cpp  abc  array_gzip.cpp  binfileread  binfileread.cpp  decltype  decltype.cpp  fault_check  fault_check.cpp  fault_check.h  filepath  filepath.cpp  fileread  fileread.cpp  filesystem.cpp  hexstr  hexstr.cpp  i2c_dev  i2c_dev.cpp  i2c_test.cpp  kktestmap  knowledge  knowledge.cpp  knowledge.h  log  log.cpp  map  map.cpp  p_thread  p_thread.cpp  pathcpp  ptr  ptr.cpp  ran  ran.cpp  regex_learn  (+23 more)
code_c++/designmode/: abstractfactorymode  abstractfactorymode.cpp  factorymode  factorymode.cpp  proxymode  proxymode.cpp
code_c++/file/protocol/: CMakeLists.txt  pb_generator.cpp
code_c++/function/: chattr.cpp  muban.cpp  returnuse.cpp  system  system.cpp
code_c++/learnplan/: eight  eight.cpp  fifth  fifth.cpp  first_charter  first_charter.cpp  fourth  fourth.cpp  seven  seven.cpp  seventeen  seventeen.cpp  third_charter  third_charter.cpp
code_c++/logger/: spdlog  spdlog.cpp
code_c++/thridpartlib/: rapidjson-v1.1.0.tar
file/: json_file_deal  json_file_deal.cpp
network/: 00-myvlan.netdev  10-myethernet.network  20-myvlan.network  s1  s2  s3  s4  static-ip.yaml
python/: imu.pb
python/proto/: nio_flash.proto  nio_flash_pb2.py  nio_flash_pb_config.py
python/pytest/: ansi.py  check_abnormal_service.py  init.sh  test_mazu_cmd.py
python/util/: extract.py  extract_subdir.py  filescp.py  get_systemd_init.py  mazu3  mazu_cmd_1234.py  mazu_net_connection_init.py  net_test.py  nfs_s1_test.py  nio_app_startup_time.py  run_remote_cmd.py  set_network.sh  sync_stress_test.py  test.py  (+13 more)
tmp/: test.log3  test.log34  testlog_kernel  testlog_systemd
tools_sh/: cycle_test.sh  dir.sh  knowledge.sh  lite_bsp_bundle_tool.sh  mazu_sync.log.soc1  mazu_sync.log.soc1_30s  mazu_sync.log.soc3  mazu_sync.log.soc3_30s  mazu_sync.sh  net.sh  run_nio_apps  set_network.sh  test.sh
(+24 files in other folders)
